Added one digit tests to cover new paths